# Pacman_Raylib

./: CMakeLists.txt  README.md
src/: globals.c  globals.h  main.c
src/management/: level-manager.c  level-manager.h  sprite-manager.c  sprite-manager.h
src/objects/: edible.c  edible.h  enemy.c  enemy.h  player.c  player.h
